fix: Displaying line height of lambertW text is not aligned

--- a/src/style/calculator/calculator.less
+++ b/src/style/calculator/calculator.less
@@ -90,6 +90,9 @@
                 .cursor {
                     max-height: 40px;
                 }
+                *[data-testid=react-katex] {
+                    height: 100%;
+                }
             }
         }
         .output-box {
